--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4065,3 +4065,9 @@ input, select, textarea {
 .form-wrapper input#toggle-reservation:checked ~ #form-reservation {
   display: block;
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+  opacity: 0.75;
+  cursor: pointer;
+}
