--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,13 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+    font-family: 'Moriarty';
+    src: url('../fonts/thesignature-webfont.woff2') format('woff2'),
+         url('../fonts/thesignature-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /*
 	Ethereal by HTML5 UP
