--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4081,7 +4081,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
 }
 
-a.moriarty {
+.moriarty {
     font-family: 'Moriarty', cursive;
     font-size: 3em;
 }
