--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4089,5 +4089,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     font-family: 'Moriarty', cursive;
     font-size: 2.2em;
     line-height: 1;
+    margin-left: 0.25em;
 }
 
