--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -73,8 +73,8 @@
   font-style: italic;
   position: absolute;
   right: 0;
-  top: 0;
-  transform: translateY(0%);
+  top: 50%;
+  transform: translateY(-50%);
   white-space: nowrap;
   opacity: 0;
   animation: fadeIn 0.5s ease forwards;
