--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -95,3 +95,13 @@
   border-color: #e74c3c !important;
 }
 
+.planning-bg {
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  background-image: url("images/gallery/fulls/Autres/03.jpg");
+  background-size: cover;
+  background-position: top left;
+  background-repeat: no-repeat;
+  pointer-events: none;
+}
