--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3711,7 +3711,7 @@ input, select, textarea {
 			}
 
 	}
-
+/* --------------------====================  PARTIE DES AJOUTS PERSONNELS  ====================-------------------- */
 	.image {
 	  position: relative;
 	}
