--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -96,17 +96,17 @@
 }
 
 .planning-bg {
-  position: absolute;
+  position: fixed; /* ✅ plus relative à la section */
   top: 0;
   left: 0;
-  right: 0;
-  height: 100%; /* par défaut */
-  z-index: 0;
+  width: 100%;
+  height: 120vh; /* hauteur fixe même si le contenu s’allonge */
   background-image: url("../../images/gallery/fulls/Autres/03.jpg");
   background-size: cover;
   background-position: top left;
   background-repeat: no-repeat;
   pointer-events: none;
+  z-index: -1; /* en dessous de tout */
 }
 
 @media (max-width: 768px) {
