--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -127,3 +127,10 @@
     height: 100%;
   }
 }
+
+.map-container {
+  width: 100%;
+  height: 400px;
+  border-radius: 12px;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
