--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -169,3 +169,15 @@
     border-radius: 8px;
   }
 }
+
+.panel > *.color5 {
+  background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(248, 227, 220, 0.25), rgba(245, 234, 230, 0.25));
+  background-size: 128px 128px, auto;
+  background-color: #f8e3dc;
+}
+
+.panel > *.color5-alt {
+  background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(248, 227, 220, 0.175), rgba(245, 234, 230, 0.175));
+  background-size: 128px 128px, auto;
+  background-color: #f5eae6;
+}
