--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -171,13 +171,16 @@
 }
 
 .panel > *.color5 {
-  background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(248, 227, 220, 0.25), rgba(245, 234, 230, 0.25));
+  background-image: url("../../images/overlay.png"),
+    linear-gradient(45deg, rgba(249, 203, 164, 0.25) 25%, rgba(247, 184, 143, 0.25) 50%);
   background-size: 128px 128px, auto;
-  background-color: #f8e3dc;
+  background-color: #f9cba4;
 }
 
 .panel > *.color5-alt {
-  background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(248, 227, 220, 0.175), rgba(245, 234, 230, 0.175));
+  background-image: url("../../images/overlay.png"),
+    linear-gradient(45deg, rgba(249, 203, 164, 0.175) 25%, rgba(247, 184, 143, 0.175) 50%);
   background-size: 128px 128px, auto;
-  background-color: #f5eae6;
+  background-color: #f7b88f;
 }
+
