--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -172,15 +172,14 @@
 
 .panel > *.color5 {
   background-image: url("../../images/overlay.png"),
-    linear-gradient(45deg, rgba(249, 203, 164, 0.25) 25%, rgba(247, 184, 143, 0.25) 50%);
+    linear-gradient(45deg, rgba(168, 108, 77, 0.25) 25%, rgba(74, 141, 156, 0.15) 50%);
   background-size: 128px 128px, auto;
-  background-color: #f9cba4;
+  background-color: #a86c4d;
 }
 
 .panel > *.color5-alt {
   background-image: url("../../images/overlay.png"),
-    linear-gradient(45deg, rgba(249, 203, 164, 0.175) 25%, rgba(247, 184, 143, 0.175) 50%);
+    linear-gradient(45deg, rgba(74, 141, 156, 0.25) 25%, rgba(168, 108, 77, 0.15) 50%);
   background-size: 128px 128px, auto;
-  background-color: #f7b88f;
+  background-color: #4a8d9c;
 }
-
