--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -179,7 +179,12 @@
 
 .panel > *.color5-alt {
   background-image: url("../../images/overlay.png"),
-    linear-gradient(45deg, rgba(74, 141, 156, 0.25) 25%, rgba(168, 108, 77, 0.15) 50%);
+    linear-gradient(
+      45deg,
+      rgba(74, 141, 156, 0.25) 20%,
+      rgba(168, 108, 77, 0.15) 50%,
+      rgba(255, 228, 180, 0.2) 80%
+    );
   background-size: 128px 128px, auto;
   background-color: #4a8d9c;
 }
