--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2243,6 +2243,12 @@ input, select, textarea {
 				background-color: #353865;
 			}
 
+			.panel > *.color5 {
+				  background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(168, 108, 77, 0.25) 25%, rgba(74, 141, 156, 0.15) 50%);
+				  background-size: 128px 128px, auto;
+				  background-color: #a86c4d;
+			}
+
 			.panel > *.color1-alt {
 				background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.175) 25%, rgba(227, 123, 124, 0.175) 50%, rgba(255, 228, 180, 0.175));
 				background-size: 128px 128px, auto;
@@ -2265,6 +2271,12 @@ input, select, textarea {
 				background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.175) 25%, rgba(227, 123, 124, 0.175) 50%, rgba(255, 228, 180, 0.175));
 				background-size: 128px 128px, auto;
 				background-color: #323459;
+			}
+
+			.panel > *.color5-alt {
+				background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(74, 141, 156, 0.175) 20%, rgba(168, 108, 77, 0.175) 50%, rgba(255, 228, 180, 0.175));
+				background-size: 128px 128px, auto;
+				background-color: #4a8d9c;
 			}
 
 		.panel > .intro {
