--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2796,6 +2796,12 @@ input, select, textarea {
 			background-color: #323459;
 		}
 
+		.panel.color5-alt {
+			background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(74, 141, 156, 0.175) 20%, rgba(168, 108, 77, 0.175) 50%, rgba(255, 228, 180, 0.175));
+			background-size: 128px 128px, auto;
+			background-color: #4a8d9c;
+			}
+			
 	@media screen and (max-width: 736px) {
 
 		.panel {
@@ -4128,4 +4134,3 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   box-shadow: 0 0 12px var(--blur-shadow);
   padding: 2rem;
 }
-
