--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -105,10 +105,10 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 700px; /* Hauteur fixe ! */
+  height: 750px; /* Hauteur fixe ! */
   background-image: url("../../images/gallery/fulls/Autres/03.jpg");
   background-size: cover;
-  background-position: top left;
+  background-position: top;
   background-repeat: no-repeat;
   z-index: 0;
   pointer-events: none;
