--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -225,7 +225,7 @@
 }
 
 .calendar-cell.in-range {
-  background-color: rgba(255, 255, 255, 0.07);
-  color: white;
-  border: 1px dashed rgba(255, 255, 255, 0.2);
+  border: 2px solid #f5d100;
+  background-color: rgba(245, 209, 0, 0.15);
+  box-shadow: 0 0 5px 2px rgba(245, 209, 0, 0.25);
 }
